[package]
name = "battle-net"
version = "0.1.0"
authors = ["Zolstoy <zolstoy.dev@gmail.com>"]
edition = "2021"

[lib]
doctest = false

[dependencies]
anyhow = "1.0.98"
battle-net-oauth = "0.3.0"
reqwest = "0.12.15"
thiserror = "2.0.12"

[dev-dependencies]
hyper = { version = "1.6.0", features = ["full"] }
tokio = { version = "1.45.0", features = ["full"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.11", features = ["full"] }
